Fixed api doc for gebruiker and gebruiker_detail view
